package com.directi.training.isp.ProposedSolution;

public interface ISensingDoor extends Door {

    void proximityCallback();
}
