package com.directi.training.isp.ProposedSolution;

public interface ITimedDoor extends Door{
    void timeOutCallback();

}
